--- a/style.css
+++ b/style.css
@@ -8,30 +8,39 @@ img {
 }
 
 
+/*
 header {
     position: absolute;
     width: 100%;
 }
+*/
 
 body {
     margin: 0.1px;
     padding: 0;
     line-height: 0;
-
+    background-color: #F2EFEF;
 }
 
 h1 {
-    font-family: titling-gothic-fb-condensed, sans-serif;
+    /*    font-family: titling-gothic-fb-condensed,
+sans-serif;*/
+    font-family: 'Raleway', sans-serif;
+
     line-height: 1.9rem;
-    font-size: 1.7rem;
+    font-size: 3rem;
     text-transform: uppercase;
+    color: black;
+    font-weight: 300;
 
 }
 
 h2 {
     font-family: titling-gothic-fb-condensed, sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     text-transform: uppercase;
+    font-weight: 100;
+
 
 }
 
@@ -39,6 +48,7 @@ h3 {
     font-family: titling-gothic-fb-condensed, sans-serif;
     text-transform: uppercase;
     font-size: 0.8rem;
+    font-weight: 100;
 }
 
 p {
@@ -48,7 +58,7 @@ p {
 }
 
 a {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 1rem;
     text-decoration: none;
     color: white;
@@ -69,7 +79,7 @@ a {
     width: 3rem;
     font-size: 3rem;
     font-family: 'Lato', sans-serif;
-    color: white;
+    color: black;
     margin-top: 0.5rem;
     margin-left: 1rem;
 
@@ -91,7 +101,7 @@ a {
     font-family: 'Lato', sans-serif;
     font-size: 3rem;
     text-decoration: none;
-    color: white;
+    color: black;
     line-height: 1.6;
 
 }
@@ -111,11 +121,12 @@ a {
 */
 
 
+/*
 header img {
     max-width: 50%;
     margin-left: 1rem;
     display: block;
-}
+}*/
 
 .mobilenav {
     width: 100%;
@@ -131,12 +142,81 @@ header {
     width: 100%;
     display: inline;
     position: fixed;
+    top: 0;
     z-index: 2;
     display: flex;
     flex-direction: column;
+    background-color: black;
+    padding-right: 80px;
 }
 
-/*****MENU BAR TABLET*****/
+
+
+
+/***** SPLASH START *****/
+
+
+/***** SPLASH SLUT *****/
+
+/****** PORTFOLIO START *****/
+
+
+.sectionwrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#portfolio .col {
+
+    padding: 20px;
+    flex-grow: 1;
+    flex-basis: 200px;
+    position: relative;
+    text-align: center;
+    color: white;
+
+
+}
+
+#portfolio .centered {
+    position: absolute;
+    top: 33%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
+    pointer-events: none;
+}
+
+#portfolio .colorboxtext {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: titling-gothic-fb-condensed, sans-serif;
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 7px;
+    pointer-events: none;
+
+}
+
+#portfolio h1 {
+    text-align: center;
+    margin-top: 200px;
+}
+
+#portfolio img:hover {
+    transition: .5s ease;
+    transform: scale(1.2);
+}
+
+
+/****** PORTFOLIO SLUT *****/
+
+/***** MEDIA QUERIES START *****/
+
+/***** Media Query Tablet *****/
 
 @media only screen and (min-width:400px) {
     header img {
@@ -147,61 +227,23 @@ header {
 
 }
 
-/****** MENU BAR DESKTOP ******/
+/****** Media Query Desktop ******/
 
+
+/***** MENU BAR DESKTOP START *****/
 @media only screen and (min-width: 945px) {
     .mobilenav {
         display: none;
     }
 
-    .dropdowndesktop {
-        float: left;
-        overflow: hidden;
-    }
-
-    .dropdowndesktop .portfolie {
-        font-family: 'Lato', sans-serif;
-        font-size: 22px;
-        color: white;
-        padding-right: 1rem;
-        text-align: right;
-        border: none;
-        outline: none;
-        margin: 0;
-        content: "\u2261";
-        line-height: 1.2rem;
-
-    }
-
+    /*
     header .portfolie {
         margin: 0;
         padding: 0;
 
     }
+*/
 
-    .dropdown-contentdesktop {
-        display: none;
-        position: absolute;
-        min-width: 140px;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-        z-index: 1;
-    }
-
-    .dropdown-contentdesktop a {
-        padding: 7px 10px;
-        font-weight: 400;
-        display: block;
-        text-align: left;
-        color: white;
-    }
-
-    .dropdown-contentdesktop a:hover {
-        background-color: lightgrey;
-    }
-
-    .dropdowndesktop:hover .dropdown-contentdesktop {
-        display: block;
-    }
 
     header {
         width: 100%;
@@ -223,20 +265,21 @@ header {
         line-height: 1.2rem;
         background-size: cover;
         margin-top: 20px;
+        color: white;
     }
 
     .siteheader a:hover {
-        color: black;
+        color: white;
     }
 
     header .portfolie:hover {
-        color: black;
+        color: white;
     }
 
     /*ingen streg under links*/
     header nav a {
         text-decoration: none;
-        padding-right: 1rem;
+        padding-right: 2rem;
     }
 
     header a {
@@ -244,23 +287,37 @@ header {
         font-size: 22px;
     }
 
+/*
     header img {
         max-width: 15rem;
         margin-left: 3rem;
     }
+*/
 
     .siteheader nav {
         margin-right: 2.5rem;
     }
 
 
+    /***** MENU BAR DESKTOP SLUT *****/
+
+    #portfolio .sectionwrapper {
+        padding: 50px 100px 100px 50px;
+    }
+
+    #portfolio img {
+        width: 100%;
+    }
+
+    #portfolio .col {
+        margin: 20px;
+    }
+
+    .logo {
+        width: 40%;
+        filter: grayscale(100%);
+    }
 
 }
 
-
-/***** MENUBAR SLUT *****/
-
-/***** SPLASH START *****/
-
-
-/***** SPLASH SLUT *****/
+/***** MEDIA QUERIES SLUT *****/
