--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h2 {
 h3 {
     font-family: titling-gothic-fb-condensed, sans-serif;
     text-transform: uppercase;
-    font-size: 0.8rem;
+    font-size: 1.6rem;
     font-weight: 100;
 }
 
@@ -48,6 +48,13 @@ p {
     font-family: 'Raleway', sans-serif;
     font-size: 1rem;
     line-height: 1.5rem;
+}
+
+figcaption {
+    font-family: 'Raleway', sans-serif;
+    font-size: 0.6rem;
+    line-height: 1.5rem;
+    margin-left: 10px;
 }
 
 a {
@@ -227,7 +234,7 @@ footer a {
 
 #portfolio .centered {
     position: absolute;
-    top: 33%;
+    top: 18%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: black;
@@ -238,17 +245,20 @@ footer a {
     color: white;
 }
 
+#portfolio span {}
+
 #portfolio .colorboxtext {
     position: absolute;
-    top: 50%;
+    top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
     font-family: 'Raleway', sans-serif;
-    font-size: 1.8rem;
+    /*    font-size: 1.8rem;*/
     text-transform: uppercase;
     font-weight: 100;
     letter-spacing: 7px;
     pointer-events: none;
+    font-size: 1.8rem;
 
 }
 
@@ -264,8 +274,11 @@ footer a {
 
 #portfolio img:hover {
     transition: .5s ease;
-    transform: scale(1.2);
+    transform: scale(1.3) translateY(10px);
 }
+
+
+
 
 
 
@@ -321,11 +334,10 @@ footer a {
     transition-duration: 0.4s;
 
 
-
 }
 
 .button a:hover {
-    background-color: black;
+    color: black;
 }
 
 #web .button a {
@@ -338,6 +350,7 @@ footer a {
 #ux .button a {
 
     background-color: #C06C84;
+    margin-top: 100px;
 
 }
 
@@ -375,8 +388,6 @@ footer a {
 }
 
 #web .col {
-    display: flex;
-    flex-wrap: wrap;
     flex-grow: 1;
     flex-basis: 300px;
 
@@ -411,6 +422,7 @@ footer a {
 
 #web p {
     padding: 15px;
+    margin-bottom: 50px;
 }
 
 
@@ -759,7 +771,19 @@ footer a {
 
         }
 
+        10% {
+            transform: rotateX(0) translateX(-2.5px);
+
+
+        }
+
         50% {
+            transform: rotateX(3.142rad) translateX(2.5px);
+
+
+        }
+
+        60% {
             transform: rotateX(3.142rad) translateX(2.5px);
 
 
@@ -767,6 +791,49 @@ footer a {
 
         100% {
             transform: rotateX(0) translateX(-2.5px);
+
+
+        }
+
+
+    }
+
+    .rotate {
+        animation-name: rotate_kf;
+        animation-iteration-count: infinite;
+        animation-duration: 6s;
+        animation-timing-function: linear;
+
+    }
+
+    @keyframes rotate_kf {
+        0% {
+            transform: rotateX(0) translateX(-15px);
+
+
+        }
+
+        2% {
+            transform: rotateX(0) translateX(-15px);
+
+
+        }
+
+        50% {
+            transform: rotateX(3.142rad) translateX(15px);
+
+
+        }
+
+        53% {
+            transform: rotateX(3.142rad) translateX(15px);
+
+
+        }
+
+
+        100% {
+            transform: rotateX(0) translateX(-15px);
 
 
         }
@@ -864,7 +931,7 @@ footer a {
         width: 10rem;
         height: 1rem;
 
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: 300;
         padding: 20px;
         margin-left: 10px;
@@ -883,6 +950,14 @@ footer a {
     #web .img {
         width: 60%;
     }
+
+    #web p,
+    #ux p,
+    #animation p,
+    #indhold p {
+        margin-bottom: 100px;
+    }
+
 
 
 
@@ -1024,44 +1099,44 @@ footer a {
     }
 
     .delay1 {
-        animation-delay: .3s;
+        animation-delay: .2s;
     }
 
     .delay2 {
-        animation-delay: .6s;
+        animation-delay: .4s;
     }
 
     .delay3 {
-        animation-delay: .9s;
+        animation-delay: .6s;
 
     }
 
     .delay4 {
-        animation-delay: 1.2s;
+        animation-delay: .8s;
     }
 
     .delay5 {
-        animation-delay: 1.5s;
+        animation-delay: 1s;
     }
 
     .delay6 {
-        animation-delay: 1.8s;
+        animation-delay: 1.2s;
     }
 
     .delay7 {
-        animation-delay: 2.1s;
+        animation-delay: 1.4s;
     }
 
     .delay8 {
-        animation-delay: 2.4s;
+        animation-delay: 1.6s;
     }
 
     .delay9 {
-        animation-delay: 2.7s;
+        animation-delay: 1.8s;
     }
 
     .delay10 {
-        animation-delay: 3s;
+        animation-delay: 2s;
     }
 
 
